start server and client with concurrently

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"cd backend && node server.js\" \"cd client && npm start\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/wroclawianka/phonebook/issues"
   },
-  "homepage": "https://github.com/wroclawianka/phonebook#readme"
+  "homepage": "https://github.com/wroclawianka/phonebook#readme",
+  "dependencies": {
+    "concurrently": "^4.1.1"
+  }
 }
